--- a/src/db/app.json
+++ b/src/db/app.json
@@ -255,5 +255,16 @@
       "starters": ["lemonWater"]
     }
   ],
-  "booking": []
+  "booking": [
+    {
+      "id": 1,
+      "date": "2019-11-30",
+      "hour": "18:00",
+      "table": 1,
+      "repeat": "daily",
+      "duration": 2,
+      "ppl": 3,
+      "starters": ["water"]
+    }
+  ]
 }
